@@ -3,6 +3,10 @@ v4.5.0
   * Add `init` command to explicitly request auth setup/refresh
   * Add support for config.toml file and `gcalcli config edit` command
   * Add support for `gcalcli util config-schema|reset-cache` commands
+  * Behavior change: `--noincluderc` now skips gcalclirc files unconditionally,
+    w/ or w/o --config-folder
+    - POSSIBLE ACTION REQUIRED: Use `@path/to/gcalclirc` explicitly if it stops
+      reading an rc file you needed
   * Respect locally-installed certificates (ajkessel)
   * Re-add a `--noauth_local_server` to provide instructions for authenticating
     from a remote system using port forwarding
